force-app/main/default/objects/Settings_for_creation_form_Candidate__mdt/Settings_for_creation_form_Candidate__mdt.object-meta.xml
<CustomObject>
    <label>Settings for creation-form Candidate</label>
    <pluralLabel>Settings for creation-form Candidate</pluralLabel>
</CustomObject>