force-app/main/default/objects/Settings_for_creation_form_Candidate__mdt/fields/Fields_in_FieldSet__c.field-meta.xml
<CustomField>
    <fullName>Fields_in_FieldSet__c</fullName>
    <label>Fields in FieldSet (only API)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>