force-app/main/default/objects/Settings_for_creation_form_Candidate__mdt/fields/Fields_in_FieldSet_for_JobApp__c.field-meta.xml
<CustomField>
    <fullName>Fields_in_FieldSet_for_JobApp__c</fullName>
    <label>Fields in FieldSet for JobApp (only API)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>