force-app/main/default/objects/Settings_for_creation_form_Candidate__mdt/fields/FieldSet__c.field-meta.xml
<CustomField>
    <fullName>FieldSet__c</fullName>
    <label>FieldSet (use name only API)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>