force-app/main/default/objects/Settings_for_creation_form_Candidate__mdt/fields/FieldSet_for_JobApp__c.field-meta.xml
<CustomField>
    <fullName>FieldSet_for_JobApp__c</fullName>
    <label>FieldSet for JobApp (use name only API)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>